<resources>
    <string name="app_name">Calculator</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear">AC</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="bracket">( )</string>
    <string name="decimal">.</string>
    <string name="equals">=</string>
    <string name="percentage">%</string>
    <string name="backspace"> </string>
    <string name="display_hint">Calculator </string>


    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="arcsin">arcsin</string>
    <string name="arccos">arccos</string>
    <string name="arctan">arctan</string>
    <string name="factorial">!</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="power">^</string>
    <string name="pi">π</string>
    <string name="sqrt">√</string>


</resources>