<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="10dp">

    <TextView
        android:id="@+id/previousView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/displayView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.709" />

    <EditText
        android:id="@+id/displayView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/display_hint"
        android:textSize="48sp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:textAlignment="textEnd"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="10dp"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/equal"
            android:layout_width="75dp"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/equal_background"
            android:onClick="equalBTN"
            android:text="@string/equals"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toEndOf="@+id/decimal"
            app:layout_constraintTop_toBottomOf="@+id/add" />

        <Button
            android:id="@+id/clear"
            android:layout_width="75dp"
            android:layout_height="65dp"
            android:background="@drawable/clear_background"
            android:onClick="clearBTN"
            android:layout_marginTop="10dp"
            android:text="@string/clear"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/backspace"
            android:layout_width="75dp"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_background"
            android:onClick="backspaceBTN"
            app:srcCompat="@drawable/backspace"
            android:contentDescription="@string/backspace"
            app:layout_constraintStart_toEndOf="@+id/clear"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bracket"
            android:layout_width="75dp"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_background"
            android:onClick="bracketBTN"
            android:text="@string/bracket"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/backspace"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/divide"
            android:layout_width="75dp"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/arithmetic_background"
            android:onClick="divideBTN"
            android:text="@string/divide"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/bracket"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/seven"
            android:layout_width="75dp"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="sevenBTN"
            android:text="@string/seven"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clear" />

        <Button
            android:id="@+id/eight"
            android:layout_width="75dp"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="eightBTN"
            android:text="@string/eight"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/seven"
            app:layout_constraintTop_toBottomOf="@+id/backspace" />

        <Button
            android:id="@+id/nine"
            android:layout_width="75dp"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="nineBTN"
            android:text="@string/nine"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/eight"
            app:layout_constraintTop_toBottomOf="@+id/bracket" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="75dp"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_background"
            android:onClick="multiplyBTN"
            android:text="@string/multiply"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/nine"
            app:layout_constraintTop_toBottomOf="@+id/divide" />

        <Button
            android:id="@+id/four"
            android:layout_width="75dp"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="fourBTN"
            android:text="@string/four"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seven" />

        <Button
            android:id="@+id/one"
            android:layout_width="75dp"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="oneBTN"
            android:text="@string/one"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/four" />

        <Button
            android:id="@+id/zero"
            android:layout_width="75dp"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="zeroBTN"
            android:text="@string/zero"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toEndOf="@+id/percentage"
            app:layout_constraintTop_toBottomOf="@+id/two" />

        <Button
            android:id="@+id/five"
            android:layout_width="75dp"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="fiveBTN"
            android:text="@string/five"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/four"
            app:layout_constraintTop_toBottomOf="@+id/eight" />

        <Button
            android:id="@+id/two"
            android:layout_width="75dp"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="twoBTN"
            android:text="@string/two"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/one"
            app:layout_constraintTop_toBottomOf="@+id/five" />

        <Button
            android:id="@+id/six"
            android:layout_width="75dp"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="sixBTN"
            android:text="@string/six"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/five"
            app:layout_constraintTop_toBottomOf="@+id/nine" />

        <Button
            android:id="@+id/three"
            android:layout_width="75dp"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="threeBTN"
            android:text="@string/three"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/two"
            app:layout_constraintTop_toBottomOf="@+id/six" />

        <Button
            android:id="@+id/subtract"
            android:layout_width="75dp"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_background"
            android:onClick="subtractBTN"
            android:text="@string/subtract"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/six"
            app:layout_constraintTop_toBottomOf="@+id/multiply" />

        <Button
            android:id="@+id/decimal"
            android:layout_width="75dp"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_background"
            android:onClick="decimalBTN"
            android:text="@string/decimal"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toEndOf="@+id/zero"
            app:layout_constraintTop_toBottomOf="@+id/three" />

        <Button
            android:id="@+id/add"
            android:layout_width="75dp"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_background"
            android:onClick="addBTN"
            android:text="@string/add"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/three"
            app:layout_constraintTop_toBottomOf="@+id/subtract" />

        <Button
            android:id="@+id/percentage"
            android:layout_width="75dp"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_background"
            android:onClick="percentageBTN"
            android:text="@string/percentage"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/one" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>